@@ -1,6 +1,7 @@
 package miprimerRest.jakarta.security;
 
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.security.enterprise.credential.BasicAuthenticationCredential;
 import jakarta.security.enterprise.credential.Credential;
 import jakarta.security.enterprise.credential.UsernamePasswordCredential;
 import jakarta.security.enterprise.identitystore.CredentialValidationResult;
@@ -23,26 +24,23 @@ public class InMemoryIdentityStore implements IdentityStore {
     @Override
     public CredentialValidationResult validate(Credential credential) {
 
-        if (credential instanceof UsernamePasswordCredential) {
-            UsernamePasswordCredential user = UsernamePasswordCredential
-                    .class.cast(credential);
+
+
+        if (credential instanceof BasicAuthenticationCredential) {
+            BasicAuthenticationCredential user = (BasicAuthenticationCredential)credential;
 
 
             HashSet<String> roles = new HashSet<>();
             roles.add("admin");
             roles.add("user");
 
-
-            switch (user.getCaller()) {
-                case "admin":
-                    return new CredentialValidationResult("admin", Set.of("ADMIN"));// Collections.singleton("ADMIN"));
-                case "paco":
-                    return new CredentialValidationResult("paco", Collections.singleton("user"));
-                case "user":
-                    return new CredentialValidationResult("user", Collections.singleton("user"));
-                default:
-                    return INVALID_RESULT;
-            }
+            user.getPassword().getValue();
+            return switch (user.getCaller()) {
+                case "admin" -> new CredentialValidationResult("admin", Set.of("admin"));// Collections.singleton("ADMIN"));
+                case "paco" -> new CredentialValidationResult("paco", Collections.singleton("user"));
+                case "user" -> new CredentialValidationResult("user", Collections.singleton("user"));
+                default -> INVALID_RESULT;
+            };
 
         }
         return INVALID_RESULT;
